<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".StudentHome">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPublishers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publisherHeader2" />

    <TextView
        android:id="@+id/publisherHeader2"
        android:layout_width="178dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="Publishers"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/studentToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/notificationToolbarButton"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:clickable="false"
        android:shadowColor="#002E0606"
        android:text="Notifications"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:topRightRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/publishersToolbarButton"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:radius="50dp"
        android:text="Publishers"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/notificationToolbarButton" />

    <Button
        android:id="@+id/mapToolbarButton"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:radius="50dp"
        android:text="Map"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/publishersToolbarButton" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:text="Logout"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintStart_toEndOf="@+id/publisherHeader2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:background="@color/background_yellow"
        android:text="Profile"
        app:layout_constraintEnd_toStartOf="@+id/logout_button"
        app:layout_constraintStart_toEndOf="@+id/publisherHeader2"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
