...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/student_button"
        android:layout_width="142dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_rounded"
        android:text="Student"
        android:textColor="#ffffff"
...
